package org.alayse.marsserver.proto.game;


message MessagePush {
    required string room = 1;
    required string content = 2;
    required int32 nextplayer = 3;
}
